--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <p>Olá, eu Sou o  </p>
                         <h1>Jones Nambundo</h1>
                         <h2>Desenvolvedor Frontend</h2>
-                        <a href="#about" class="btn link-item">Sobre Me</a>
+                        <a href="#about" class="btn link-item">Sobre Mim</a>
                         <a href="#portfolio" class="btn link-item">Portfólio</a>
                         <a href="https://www.linkedin.com/in/jonesnambundo" class="btn link-item" target="_blank">LinkedIn</a>
 
