--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <div class="nav-inner">
                             <ul>
                                 <li><a href="#home" class="nav-item link-item">Home</a></li>
-                                <li><a href="#about" class="nav-item link-item">Sobre Me</a></li>
+                                <li><a href="#about" class="nav-item link-item">Sobre Mim</a></li>
                                 <li><a href="#portfolio" class="nav-item link-item">Portfolio</a></li>
                                 <li><a href="#contact" class="nav-item link-item">Contate Me</a></li>
                             </ul>
@@ -54,7 +54,6 @@
             </div>
         </header>
         <!-- Header End-->
-
         <!--Home Section start-->
         <section class="home-section align-items-center" id="home">
             <div class="container">
@@ -66,7 +65,6 @@
                         <a href="#about" class="btn link-item">Sobre Mim</a>
                         <a href="#portfolio" class="btn link-item">Portfólio</a>
                         <a href="https://www.linkedin.com/in/jonesnambundo" class="btn link-item" target="_blank">LinkedIn</a>
-
                     </div>
                     <div class="home-img">
                         <div class="img-box">
@@ -77,7 +75,6 @@
             </div>
         </section>
         <!--Home section end-->
-
         <!-- About section start-->
         <section class="about-section sec-padding" id="about">
             <div class="container">
@@ -416,21 +413,14 @@
                                     <a href="https://www.linkedin.com/in/jonesnambundo/" target="_blank"><i class="fab fa-linkedin"></i></a>
                                     <a href="https://wa.me/35991925561" target="_blank"><i class="fab fa-whatsapp"></i></a>
                                 </div>
-                                
-                                
                             </div>
                     </div>
                 </div>
             </div>
-
         </section>
-
-
         <!--Contact Section end-->
-
     </div>
     <!-- Main End -->
-
     <!--Portfolio Item details Popup Start-->
     <div class="portfolio-popup">
         <div class="pp-inner">
