--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="container">
                 <div class="row">
                     <div class="section-title">
-                        <h2>Sobre Me</h2>
+                        <h2>Sobre Mim</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                         <div class="about-text">
-                            <p>Sou um profissional formado em Sistema de informação. Tenho um ano de experiência como desenvolvedor Frontend. Inicialmente, minha área de foco era 
+                            <p> Sou um profissional formado em Sistema de informação. Tenho um ano de experiência como desenvolvedor Frontend. Inicialmente, minha área de foco era 
                                 a telecomunicação, mas devido ao meu interesse em design e tecnologia web, decidi me especializar como desenvolvedor Full Stack Java, para alcançar 
                                 os meus objetivos profissionais tenho investido em minha qualificação 
                                 por meio da EBAC (Escola Britânica de Artes Criativas e Tecnologia) e trabalhado como freelancer, onde tenho enfrentado diversos desafios. <br>
